update emoticon, hero, & testimoni

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
         <div class="row g-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative bg">
-              <i class="bi bi-laptop-fill icon"></i>
+              <i class="bi bi-pc-display-horizontal icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 💻</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 👩🏻‍💻</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -437,9 +437,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
-              <i class="bi bi-people-fill icon"></i>
+              <i class="bi bi-people icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 👩‍🏫</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 👩🏻‍🏫</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
@@ -453,9 +453,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
-              <i class="bi bi-easel icon"></i>
+              <i class="bi bi-easel2 icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🧒</h3>
+                <h3>Kelas Presentasi Anak 👦🏻</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -488,9 +488,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
-              <i class="bi bi-calendar4-week icon"></i>
+              <i class="bi bi-calendar2-check icon"></i>
               <div>
-                <h3>Jadwalkan Bertemu Admin 🧑🏻‍💼</h3>
+                <h3>Jadwalkan Bertemu Admin 👨🏻‍💼</h3>
                 <p>
                   Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
                   mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -505,9 +505,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
-              <i class="bi bi-building-check icon"></i>
+              <i class="bi bi-building icon"></i>
               <div>
-                <h3>Kelas Khusus Kantor 🏪</h3>
+                <h3>Kelas Khusus Kantor 🏢💼</h3>
                 <p>
                   Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
                   gak bisa diajak diskusi. Saran kami dibandingkan benahi
@@ -595,9 +595,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVeui8gH9ONxZNJLvtOSS6aSiq_Xwf-eb6mikufgJPD0jMgZGdV=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUoNFK6XtYRwswgv6hXz4DMDq9vvxGHk1YD_eRrKNqF8vY8HAsk7w=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-3" />
-                      <h3>imam baehaqi</h3>
+                      <h3>Bella Ababil</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -607,11 +607,7 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        thank you dialogika, the knowledge files, thank God there has been extraordinary progress,
-                        especially my mentor, Mas Panji, who was always patient in guiding me from the first
-                        IDIALOGIKA team <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">meeting to the last meeting, even though it was online but very
-                          impressive, once again thank you to the</span><span class="readLess"> &laquo; Read Less</span>
+                        Sangat bermanfaat untuk meningkatkan skill public speaking, dibimbing oleh mentor yg profesional, baik, dan ramah sekali
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
