--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="row g-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative bg">
-              <i class="bi bi-pc-display-horizontal icon"></i>
+              <i class="bi bi-pc-display icon"></i>
               <div>
                 <h3>Penawaran Eksklusif Kelas Online! 👩🏻‍💻</h3>
                 <p>
@@ -453,7 +453,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
-              <i class="bi bi-easel2 icon"></i>
+              <i class="bi bi-easel3-fill icon"></i>
               <div>
                 <h3>Kelas Presentasi Anak 👦🏻</h3>
                 <p>
@@ -471,7 +471,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
-              <i class="bi bi-person-badge icon"></i>
+              <i class="bi bi-mortarboard-fill icon"></i>
               <div>
                 <h3>Internship Program 🎓💼</h3>
                 <p>
