sudah update testi, gambar, dan icon

--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVlcd-NFYqxqMlrPNyCGJfhkwtyKv80PrKhQygOFcw5dDqsu-tFHQ=w75-h75-p-rp-mo-ba4-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXxRWA08N6rk_ppQMDZNa0P81yy2C9Z1NK85RlBHnvAA9rHY08D=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Miftahul Jannah SPd</h3>
+                      <h3>Salsabila Athirah Melisani Zahra</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -563,27 +563,25 @@
                         <i class="bi bi-star-fill"></i>
                       </h4>
                       <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>Thank God I found a place to learn public
-                        speaking that can be combined with work, taking care of children and family. The mentor is
-                        really cool and humble. Learning is not just about theory, but is really a place for direct
-                        practice.
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>I just took a Public Speaking class at
+                        Dialogika, and this experience really changed the way I speak in public. Before taking the
+                        class, I often felt nervous and lacked confidence when I had to speak in front of many people.
+                        However, after attending the sessions given, I gained a lot of valuable insights that I can
+                        immediately apply.
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> Apart from the price being affordable compared to offline, the class
-                          management is
-                          also really good. Get e-modules and class recordings too. So we can see our progress over
-                          time from our own perspective. At first I was a bit scared, too much overthinking, but I
-                          learned a lot from my mentor. Not only about public speaking, but life values ​​too. BTW,
-                          success is always dialogue. Thank you for providing a forum for learning public speaking.
-                          Never stop learning. Advanced class updates.
-                          I'm really happy to have made the decision to continue my classes with Dialogic. Plus you get
-                          a coach who mentors you in great detail and personally. But it's just sad because it's over
-                          (so quickly). But that's okay because you can still continue the class next time. BTW, I have
-                          felt a lot of changes. Because as my mentor (Sis Caca) said, public speaking is not just the
-                          art of speaking, but the art of acting and placing yourself. Wow, what a lot of knowledge to
-                          share with the mentor. Thank you dialogika for presenting a program with quality
-                          coaches.</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText"> What I like about this class is the interactive and practical approach.
+                          The material is not only theory, but also lots of hands-on exercises, simulations, and
+                          constructive feedback from very experienced mentors. The class atmosphere is also comfortable
+                          and supportive, making me more courageous to try.
+                          <br />
+                          In addition, the mentors at Dialogi are truly professional and experienced in their fields.
+                          They not only provide effective speaking techniques but also guide participants in building
+                          self-confidence. I also got tips on how to overcome nervousness, control intonation, and
+                          convey messages more clearly.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -607,7 +605,8 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Sangat bermanfaat untuk meningkatkan skill public speaking, dibimbing oleh mentor yg profesional, baik, dan ramah sekali
+                        Sangat bermanfaat untuk meningkatkan skill public speaking, dibimbing oleh mentor yg
+                        profesional, baik, dan ramah sekali
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
