update testi & gambar promo

--- a/index.html
+++ b/index.html
@@ -766,9 +766,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUIiIkuX2_H0jI4UcNi2BgfTB4RUwMaZXiz5rGwW9bm7yZOxIa-=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVy-ayvTXhbMbOQ6cIxh6DJcoBU5VoHVEU4d2rkw0lrXFB8RRFc=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Ida Fitriana</h3>
+                      <h3>berkah papua</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -778,12 +778,14 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Thanks Dialogic and Ms. Syifa for her guidance and explaining the material step by step clearly
-                        to the children patiently and cheerfully in the Kids Plus public speaking class,
+                        First of all, I would like to say thank you very much to the very cooperative admin team and the
+                        teaching team, Mr. Dzaky, is very humble, stage
                         <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText"> there are interesting challenges in each class so it increases my
-                          children's courage. Always successful Dialogic..</span><span class="readLess"> &laquo; Read
+                        <span class="moreText"> willing to share knowledge, tips, how to speak on so as not to be
+                          nervous and nervous. So for friends who want to learn public speaking, Dialogika class is the
+                          best place. Please contact the admin and register immediately. Continued
+                          success for the Dialogika team. Thank you</span><span class="readLess"> &laquo; Read
                           Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
@@ -791,6 +793,7 @@
                   </div>
                 </div>
                 <!-- End testimonial item -->
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
