--- a/index.html
+++ b/index.html
@@ -605,7 +605,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kelas ini membantuku banget, teacher-ku, Kak Caca juga seasik itu. Beliau pengetahuannya luas ga cuma seputar public speaking. Materi yang disampaikan jelas. Kepake banget. Dan bisa mencari solusi dari kekuranganku juga. Jadi pengen belajar terus ❤️
+                        Kelas ini membantuku banget, teacher-ku, Kak Caca juga seasik itu. Beliau pengetahuannya luas ga
+                        cuma seputar public speaking. Materi yang disampaikan jelas. Kepake banget. Dan bisa mencari
+                        solusi dari kekuranganku juga. Jadi pengen belajar terus ❤️
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -672,9 +674,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWZ_iD9s3WbiTWOSprcaxBsy-fKJy_L0NjdVeor_SQCJiPrpAM=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXvVSL5EiB4dUbNJVXwrhOT340BEz2x3WlHUe4rzyo-NizYf-jc=w75-h75-p-rp-mo-ba3-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Agustin Dinda</h3>
+                      <h3>Sheryl Yehovia</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -684,14 +686,13 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        It's really really good, the mentor is really good, teaches lots of tips and tricks. It's
-                        really, really satisfying... there's a lot of knowledge to be gained 🫶🏻
-                        <!-- <span class="dots">...</span><span class="readMore"> Read
-                          More
+                        It's really exciting to be able to learn about public speaking with the cool mentor, Sis Jacob.
+                        The class is very insightful and for those who really need to build their self-confidence.
+                        <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText"></span><span
+                        <span class="moreText">this class is very helpful. Thanks Dialogic 😀</span><span
                           class="readLess"> &laquo; Read Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
                   </div>
