update gambar, testi dan icon

--- a/index.html
+++ b/index.html
@@ -670,13 +670,14 @@
                   </div>
                 </div>
                 <!-- End testimonial item -->
+
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXvVSL5EiB4dUbNJVXwrhOT340BEz2x3WlHUe4rzyo-NizYf-jc=w75-h75-p-rp-mo-ba3-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXULNTNwBpCcFEN0c8tl7Efpl-aSRPiRYGlZeuVam6wmsKY4nB1=w45-h45-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Sheryl Yehovia</h3>
+                      <h3>Frizka Aprilia</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -686,12 +687,15 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        It's really exciting to be able to learn about public speaking with the cool mentor, Sis Jacob.
-                        The class is very insightful and for those who really need to build their self-confidence.
+                        Impressions from taking the course: Very happy to be able to take this public speaking course,
+                        because I know more about what I need to improve. The tips given by the mentor during the course
+                        are also very practical, not only
                         <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText">this class is very helpful. Thanks Dialogic 😀</span><span
-                          class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">for presentations, but also for MCing, interviews, etc.
+                          Hopefully in the future my public speaking skills will get better and my hours of public
+                          speaking and interview skills will increase</span><span class="readLess"> &laquo; Read
+                          Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
