update gambar & testi

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="service-item item-cyan position-relative bg">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 👩🏻‍💻</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 💻</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -547,6 +547,44 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXL1bnGry2JI5wLFgs8qFb3JTX4wlvujpruetQuzROuf5WtlJfh=w90-h90-p-rp-mo-ba1-br100"
+                        class="testimonial-img" alt="testimoni-1" />
+                      <h3>Baguss Ditya </h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>It's really good, there's no need to doubt
+                        it, the material is easy to understand, not too much, and the mentor is also good and very easy
+                        to understand when he explains. ✨🤗 …
+                        <!-- <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> What I like about this class is the interactive and practical approach.
+                          The material is not only theory, but also lots of hands-on exercises, simulations, and
+                          constructive feedback from very experienced mentors. The class atmosphere is also comfortable
+                          and supportive, making me more courageous to try.
+                          <br />
+                          In addition, the mentors at Dialogi are truly professional and experienced in their fields.
+                          They not only provide effective speaking techniques but also guide participants in building
+                          self-confidence. I also got tips on how to overcome nervousness, control intonation, and
+                          convey messages more clearly.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
