update testimoni dan gambar

--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXL1bnGry2JI5wLFgs8qFb3JTX4wlvujpruetQuzROuf5WtlJfh=w90-h90-p-rp-mo-ba1-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX3QI9M31FBUthA898TjTaV3p_LjtYFnQBpSC2v5iPHt4IX8_DL=w90-h90-p-rp-mo-ba5-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Baguss Ditya </h3>
+                      <h3>Singgih Arie Pratomo </h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -563,9 +563,11 @@
                         <i class="bi bi-star-fill"></i>
                       </h4>
                       <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>It's really good, there's no need to doubt
-                        it, the material is easy to understand, not too much, and the mentor is also good and very easy
-                        to understand when he explains. ✨🤗 …
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>Training material that emphasizes practice,
+                        accompanied by supporting theory. Really felt the difference before and after taking classes at
+                        Dialogkita. A communicative mentor becomes a partner who makes the class more enjoyable.
+
+                        Always successful Dialogkita 🤝🏻
                         <!-- <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
@@ -631,9 +633,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXXX7aMQy04T4I_UXFrbLss8G9H780Ur-37PLYFir-joDHAe6TN=w36-h36-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUdJnGkUchyGkxZ9Pd39BxTjA85ULkkrFLJGBfOE-AzZK1h4wPh=w90-h90-p-rp-mo-ba2-br100"
                         class="testimonial-img" alt="testimoni-3" />
-                      <h3>Syeila Adnin</h3>
+                      <h3>Intan Annisa</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -643,9 +645,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kelas ini membantuku banget, teacher-ku, Kak Caca juga seasik itu. Beliau pengetahuannya luas ga
-                        cuma seputar public speaking. Materi yang disampaikan jelas. Kepake banget. Dan bisa mencari
-                        solusi dari kekuranganku juga. Jadi pengen belajar terus ❤️
+                        The classes held are quite good and the trainees are all experts. Taking this class is
+                        guaranteed to be fluent in public speaking, the important thing is to be serious and focused
+                        while taking the class ⭐⭐
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
