update testi, gambar, dan ikon

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="service-item item-cyan position-relative bg">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 💻</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 🏷️</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
