--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="row g-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative bg">
-              <i class="bi bi-laptop icon"></i>
+              <i class="bi bi-pc-display icon"></i>
               <div>
                 <h3>Penawaran Eksklusif Kelas Online! 👩🏻‍💻</h3>
                 <p>
@@ -453,7 +453,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
-              <i class="bi bi-easel icon"></i>
+              <i class="bi bi-file-earmark-slides icon"></i>
               <div>
                 <h3>Kelas Presentasi Anak 👦🏻</h3>
                 <p>
@@ -505,7 +505,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
-              <i class="bi bi-buildings icon"></i>
+              <i class="bi bi-building icon"></i>
               <div>
                 <h3>Kelas Khusus Kantor 🏢💼</h3>
                 <p>
@@ -647,9 +647,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXbvphrft3QRHIMwVmLYAv26eE5VBEFAmIwm4gvQv8JBOOFfsNg=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjU43fsVo4ZQi3jTjPvj9JZOhoDTZRif8I-Of7yrMJF6vXSQMBbT=w45-h45-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Pujiyanti Widhiastuti</h3>
+                      <h3>Aqbil Izzan</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -659,11 +659,11 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The classes are fun, you really increase your knowledge, the mentors are very patient and really
-                        care about their students. It's recommended.
+                        What an experiece!!
+Kelas Public Speaking Dialogika sangat membantu dalam melatih skill public speaking saya. tidak hanya memahami secara teoritis, kelas Dialogika juga memberikan sebuah pelajaran 
 
                         <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
+                        <span class="moreText">praktik yang dapat membantu kepercayaan diri dalam berbicara di depan umum atau untuk menjawab berbagai macam pertanyaan yang dilontarkan kepada kita. Terima kasih banyak Dialogika!!</span><span class="readLess"> &laquo; Read Less</span><i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
