update testimonial dan gambar

--- a/index.html
+++ b/index.html
@@ -551,8 +551,70 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWYCorNCNo7nv-RWgMH-I0rdtmf4ozZUzikPvwrNpzpKm4bPZY3=w72-h72-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVXpMA2vaCWtKNBmUXG7M8wJM__KbFlbCTADg2eudNNZZGRmqe6=w72-h72-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
+                      <h3>Nabil Rafif Makarim </h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The class was engaging and helped us understand the common problems we often face in public
+                        speaking, as well as how to overcome them.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> It also provided practical tips on what to avoid and how to improve the
+                          aspects that need development.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUpF8BCTYPpxylRqclEB-IZfFLDg2Sb044A-g8InQZYS-M-TSqA=w36-h36-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Nanik Kusuma </h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        It was beyond my expectations. I thought it would be full of boring theories, but it wasn’t at
+                        all. The material was concise, yet easy to understand.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> Each session ended with practice and personalized feedback from the
+                          mentor, which was a big plus. It’s perfect for anyone looking to upgrade themselves.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWYCorNCNo7nv-RWgMH-I0rdtmf4ozZUzikPvwrNpzpKm4bPZY3=w72-h72-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-3" />
                       <h3>Aris Kurniawan </h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -584,7 +646,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjXxRWA08N6rk_ppQMDZNa0P81yy2C9Z1NK85RlBHnvAA9rHY08D=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
+                        class="testimonial-img" alt="testimoni-4" />
                       <h3>Salsabila Athirah Melisani Zahra</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -625,7 +687,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjUdJnGkUchyGkxZ9Pd39BxTjA85ULkkrFLJGBfOE-AzZK1h4wPh=w90-h90-p-rp-mo-ba2-br100"
-                        class="testimonial-img" alt="testimoni-3" />
+                        class="testimonial-img" alt="testimoni-5" />
                       <h3>Intan Annisa</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -651,7 +713,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjXVkTatlbhJDQFwCwgXDp0iT_leoI2tx0_LNfydThpcALFOZrH-gw=w75-h75-p-rp-mo-ba3-br100"
-                        class="testimonial-img" alt="testimoni-2" />
+                        class="testimonial-img" alt="testimoni-6" />
                       <h3>Fahmi Rosdiana</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -679,7 +741,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjXbvphrft3QRHIMwVmLYAv26eE5VBEFAmIwm4gvQv8JBOOFfsNg=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
+                        class="testimonial-img" alt="testimoni-7" />
                       <h3>Pujiyanti Widhiastuti</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -707,7 +769,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjXULNTNwBpCcFEN0c8tl7Efpl-aSRPiRYGlZeuVam6wmsKY4nB1=w45-h45-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-2" />
+                        class="testimonial-img" alt="testimoni-8" />
                       <h3>Frizka Aprilia</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -739,7 +801,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
+                        class="testimonial-img" alt="testimoni-9" />
                       <h3>Astrid Savitri</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -769,7 +831,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjUcMakqN0FT5qg74Xn6cfDSYyOl6D5whj9gCcGv1zuFTlUNN7_b=w99-h99-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
+                        class="testimonial-img" alt="testimoni-10" />
                       <h3>Kaori Azzahra</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -802,7 +864,7 @@
                     <div class="testimonial-item">
                       <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjVy-ayvTXhbMbOQ6cIxh6DJcoBU5VoHVEU4d2rkw0lrXFB8RRFc=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-2" />
+                        class="testimonial-img" alt="testimoni-11" />
                       <h3>berkah papua</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
