update testi, gambar

--- a/index.html
+++ b/index.html
@@ -539,7 +539,8 @@
               </p>
               <div class="text-center text-md-start" style="margin-top: 20px">
                 <a target="__blank"
-                  href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu">Google Review</a>
+                  href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu">Google
+                  Review</a>
               </div>
             </div>
           </div>
@@ -551,9 +552,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVXpMA2vaCWtKNBmUXG7M8wJM__KbFlbCTADg2eudNNZZGRmqe6=w72-h72-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9eqvpuQLAHcSlvQgmSfykv04ENJje8X0sSjdcCPVHAUZ08OM=w72-h72-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Nabil Rafif Makarim </h3>
+                      <h3>DivaNorberta Sofianova </h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -563,12 +564,13 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The class was engaging and helped us understand the common problems we often face in public
-                        speaking, as well as how to overcome them.
+                        The place is comfortable The room is air-conditioned so it's cool, the classroom for learning is
+                        also comfortable and like a regular classroom.The mentors are very good,
                         <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText"> It also provided practical tips on what to avoid and how to improve the
-                          aspects that need development.
+                        <span class="moreText"> their teaching methods are fun and exciting, but the material that is
+                          delivered reaches us well.... actually there are still many things that I want to say. But
+                          that's all...anyway good luck 🤗
                         </span><span class="readLess"> &laquo; Read
                           Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
@@ -632,7 +634,8 @@
                           &raquo;</span>
                         <span class="moreText"> Here the psychological aspect of the child's development is very much
                           considered. Ms. Malla as a mentor really understands the psychology of children, and can give
-                          suggestions, what can be done in the future to help the development of the child. Very helpful to increase parents' insight in parenting children.
+                          suggestions, what can be done in the future to help the development of the child. Very helpful
+                          to increase parents' insight in parenting children.
                         </span><span class="readLess"> &laquo; Read
                           Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
